@@ -43,8 +43,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <!-- Using the latest version of geotools (e.g, 20) seems to cause issues with the shapefile
         plugin where the_geom for each feature is null. -->
-        <geotools.version>17.5</geotools.version>
-        <awsjavasdk.version>1.11.625</awsjavasdk.version>
+        <geotools.version>20.1</geotools.version>
+        <awsjavasdk.version>1.12.720</awsjavasdk.version>
     </properties>
     <build>
         <resources>
@@ -96,8 +96,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.7.0</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>11</source>
+                    <target>11</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -163,10 +163,21 @@
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
+                <configuration>
+                    <!-- This line is required to get this library, designed for older Java, to work with newer java. -->
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
     <repositories>
+        <!--  used for importing java projects from github -->
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
         <!-- Hack to force maven to check central first. Maven central is inherited from the superpom,
              but ends up at the end of the list. Though most of the time the artifact is in central,
              Maven tries to download from every other repository and fails before checking central.
@@ -197,11 +208,6 @@
                 <updatePolicy>always</updatePolicy>
             </snapshots>
         </repository>
-        <!--  used for importing java projects from github -->
-        <repository>
-            <id>jitpack.io</id>
-            <url>https://jitpack.io</url>
-        </repository>
     </repositories>
 
     <dependencies>
@@ -222,7 +228,7 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.2.3</version>
+            <version>1.2.13</version>
         </dependency>
 
         <!-- Used to connect to and import legacy editor MapDBs -->
@@ -253,7 +259,11 @@
             <version>5.5.2</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.mobilitydata.gtfs-validator</groupId>
+            <artifactId>gtfs-validator-main</artifactId>
+            <version>7.0.0</version>
+        </dependency>
         <!-- Used for loading/fetching/validating/writing GTFS entities. gtfs-lib also provides access to:
          - commons-io - generic utilities
          - AWS S3 SDK - putting/getting objects into/out of S3.
@@ -262,7 +272,7 @@
             <groupId>com.github.ibi-group</groupId>
             <artifactId>gtfs-lib</artifactId>
             <!-- Latest dev build on jitpack.io -->
-            <version>mtc-temp-merge-hack-SNAPSHOT</version>
+            <version>e9de250</version>
             <!-- Exclusions added in order to silence SLF4J warnings about multiple bindings:
                 http://www.slf4j.org/codes.html#multiple_bindings
             -->
@@ -278,15 +288,21 @@
         <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongodb-driver-sync</artifactId>
-            <version>4.0.5</version>
+            <version>4.0.6</version>
         </dependency>
 
         <!-- Miscellaneous utilities -->
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>30.0-jre</version>
+            <version>32.0.0-jre</version>
         </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+
 
         <!-- Note: Unless we are explicit with the jackson dependencies listed below, other versions included in other
         dependencies may cause conflicts. Specifically, there is an issue with the JsonAlias annotation (used in
@@ -433,6 +449,11 @@
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk-sts</artifactId>
             <version>${awsjavasdk.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.9</version>
         </dependency>
     </dependencies>
 
